5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1595_2895.log
== SUBMITION (2019-03-24 12:26:47) 
-- CODE:
unidades=input("quantos jogos")
valor=input('valor unitario')
frete=input("valor do frete")
preco total=print(unidades*valor + frete)
-- EXECUTION TIME:
0.20444
-- ERROR:
  File "/home/codebench/codes/1595/2895/main.py", line 4
    preco total=print(unidades*valor + frete)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:28:16) 
-- CODE:
unidades=input("quantos jogos")
valor=input('valor unitario')
frete=input("valor do frete")
print(unidades)
print(valor)
print(frete)

preco_total= (unidades*valor + frete)
print(preco_total)
-- EXECUTION TIME:
0.138345
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 8, in <module>
    preco_total= (unidades*valor + frete)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:29:16) 
-- CODE:
unidades=input("quantos jogos")
valor=input('valor unitario')
frete=input("valor do frete")
unidades=5
valor=25
frete=10

preco_total= (unidades*valor + frete)
print(preco_total)
-- EXECUTION TIME:
0.150154
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
135
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:29:23) 
-- CODE:
unidades=input("quantos jogos")
valor=input('valor unitario')
frete=input("valor do frete")
unidades=5
valor=25
frete=10

preco_total= (unidades*valor + frete)
print(preco_total)
-- EXECUTION TIME:
0.201548
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
135
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:30:29) 
-- CODE:
unidades=float(input("quantos jogos"))
valor=float(input('valor unitario'))
frete=float(input("valor do frete"))
unidades=5
valor=25
frete=10

preco_total=(unidades*valor + frete)
print(preco_total)
-- EXECUTION TIME:
0.139034
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
135
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
135
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
135
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:31:34) 
-- CODE:
unidades=float(input("quantos jogos"))
valor=float(input('valor unitario'))
frete=float(input("valor do frete"))
print(unidades)
print(valor)
print(frete)
preco_total=(unidades*valor + frete)
print(preco_total)
-- EXECUTION TIME:
0.129441
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
12.0
45.0
78.0
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10.0
67.0
95.0
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
246.0
975.0
321.0
240171.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:31:47) 
-- CODE:
unidades=float(input("quantos jogos"))
valor=float(input('valor unitario'))
frete=float(input("valor do frete"))
preco_total=(unidades*valor + frete)
print(preco_total)
print(unidades)
print(valor)
print(frete)

-- EXECUTION TIME:
0.179476
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
12.0
45.0
78.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
10.0
67.0
95.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
246.0
975.0
321.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:32:36) 
-- CODE:
unidades=float(input('quantos jogos'))
valor=float(input('valor unitario'))
frete=float(input('valor do frete'))
preco_total=(unidades*valor + frete)
print(unidades)
print(valor)
print(frete)

-- EXECUTION TIME:
0.193849
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
12.0
45.0
78.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
10.0
67.0
95.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
246.0
975.0
321.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:36:22) 
-- CODE:
quantidade=input('quantidade')
valor=input('valor')
frete=input('45')
total(quantidade*valor + frete)
print(total)

-- EXECUTION TIME:
0.132119
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total(quantidade*valor + frete)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:37:07) 
-- CODE:
quantidade=float(input('quantidade'))
valor=float(input('valor'))
frete=float(input('45'))
total(quantidade*valor + frete)
print(total)

-- EXECUTION TIME:
0.120936
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total(quantidade*valor + frete)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:37:57) 
-- CODE:
var1=float(input('quantidade'))
var2=float(input('valor'))
var3=float(input('45'))
total(var1*var2 + var3)
print(total)

-- EXECUTION TIME:
0.203071
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total(var1*var2 + var3)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:38:24) 
-- CODE:
var1=(input('quantidade'))
var2=(input('valor'))
var3=(input('45'))
total(var1*var2 + var3)
print(total)

-- EXECUTION TIME:
0.160475
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total(var1*var2 + var3)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:38:42) 
-- CODE:
var1=(input('quantidade'))
var2=(input('valor'))
var3=(45)
total(var1*var2 + var3)
print(total)

-- EXECUTION TIME:
0.184019
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total(var1*var2 + var3)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:38:49) 
-- CODE:
var1=(input('quantidade'))
var2=(input('valor'))
var3=(45)
total(var1*var2 +var3)
print(total)

-- EXECUTION TIME:
0.277301
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total(var1*var2 +var3)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:43:35) 
-- CODE:
var1=input('qte')
var2=input('valor')
var=input('frete')
total=var1*var2 + var3
print(total)
-- EXECUTION TIME:
0.1497
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total=var1*var2 + var3
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:43:55) 
-- CODE:
var1=input('qte')
var2=input('valor')
var=input('frete')
total= var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.145593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total= var1 * var2 + var3
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:44:38) 
-- CODE:
var1=float(input('qte'))
var2=int(input('valor'))
var=float(input('frete'))
total= var1 * var2 + var3
print(total)
-- EXECUTION TIME:
0.166949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:45:51) 
-- CODE:
var1=float(input('qte'))
var2=int(input('valor'))
var=float(input('frete'))
total= var1 * var2 + var3
print(var1)
print(var2)
print(var3)
print(total)

-- EXECUTION TIME:
0.147249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:46:03) 
-- CODE:
var1=float(input('qte'))
var2=(input('valor'))
var=float(input('frete'))
total= var1 * var2 + var3
print(var1)
print(var2)
print(var3)
print(total)

-- EXECUTION TIME:
0.137882
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total= var1 * var2 + var3
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:46:45) 
-- CODE:
var1=float(input('qte'))
var2=input('valor')
var=float(input('frete'))
total= var1 * var2 + var3
print(var1)
print(var2)
print(var3)
print(total)

-- EXECUTION TIME:
0.156803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total= var1 * var2 + var3
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:47:02) 
-- CODE:
var1=float(input('qte'))
var2=input('valor')
var=float(input('frete'))
total=(var1 * var2 + var3)
print(var1)
print(var2)
print(var3)
print(total)

-- EXECUTION TIME:
0.183569
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total=(var1 * var2 + var3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:47:17) 
-- CODE:
var1=float(input('qte'))
var2=input('valor')
var=float(input('frete'))
total=(var1)*(var2) + (var3)
print(var1)
print(var2)
print(var3)
print(total)

-- EXECUTION TIME:
0.206356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total=(var1)*(var2) + (var3)
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:49:40) 
-- CODE:
var1=input('A quantidade de jogos a serem encomendados')
var2=input('O valor unitário de cada jogo')
var3=input('frete')
total=(var1)*(var2) + (var3)
print(var1)
print(var2)
print(var3)


-- EXECUTION TIME:
0.181398
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total=(var1)*(var2) + (var3)
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:50:26) 
-- CODE:
var1=input('A quantidade de jogos a serem encomendados')
var2=input('O valor unitário de cada jogo')
var3=input('frete')
total=var1*var2 + var3
print(total)


-- EXECUTION TIME:
0.273208
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 4, in <module>
    total=var1*var2 + var3
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 12:51:31) 
-- CODE:
var1=float(input('A quantidade de jogos a serem encomendados'))
var2=int(input('O valor unitário de cada jogo'))
var3=float(input('frete'))
total=var1*var2 + var3
print(total)


-- EXECUTION TIME:
0.199206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:21) 
-- CODE:
var1=float(input('A quantidade de jogos a serem encomendados'))
var2=int(input('O valor unitário de cada jogo'))
var3=float(input('frete'))
total=var1*var2 + var3
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:27:42) 
-- CODE:
var1=float(input('A quantidade de jogos a serem encomendados'))
var2=int(input('O valor unitário de cada jogo'))
var3=float(input('frete'))
total=var1*var2 + var3
print(total)


-- EXECUTION TIME:
0.268129
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1595/2895/main.py", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:27:46) 
-- CODE:
var1=float(input('A quantidade de jogos a serem encomendados'))
var2=int(input('O valor unitário de cada jogo'))
var3=float(input('frete'))
total=var1*var2 + var3
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    var2=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:30:39) 
-- CODE:
var = input("Quantidade de jogos a sere encomendados: ")
var2=int(input('O valor unitário de cada jogo:  ")
var3=float(input('O valor do frete:  ')
total= var1 * var2 + var3
print(total)


-- ERROR:
File "XXXX", line 2
    var2=int(input('O valor unitário de cada jogo:  ")
                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:31:18) 
-- CODE:
var = input(" Quantidade de jogos a sere encomendados: ")
var2= input('O valor unitário de cada jogo:  ")
var3=float(input('O valor do frete:  '))
total= var1 * var2 + var3
print(total)


-- ERROR:
File "XXXX", line 2
    var2= input('O valor unitário de cada jogo:  ")
                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:32:20) 
-- CODE:
var = input(" Quantidade de jogos a sere encomendados: ")
var2= input('O valor unitário de cada jogo:  ')
var3=float(input('O valor do frete:  '))
total= var1 * var2 + var3
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= var1 * var2 + var3
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:33:56) 
-- CODE:
var = int(input(" Quantidade de jogos a sere encomendados: "))
var2= float(input('O valor unitário de cada jogo:  '))
var3=float(input('O valor do frete:  '))
total= var1 * var2 + var3
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= var1 * var2 + var3
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 16:34:17) 
-- CODE:
var = int(input(" Quantidade de jogos a sere encomendados: "))
var2= float(input('O valor unitario de cada jogo:  '))
var3=float(input('O valor do frete:  '))
total= var1 * var2 + var3
print(total)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total= var1 * var2 + var3
NameError: name 'var1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 16:34:38) 
-- CODE:
var = int(input(" Quantidade de jogos a sere encomendados: "))
var2= float(input('O valor unitario de cada jogo:  '))
var3=float(input('O valor do frete:  '))
total= var * var2 + var3
print(total)


-- EXECUTION TIME:
0.1665
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
